--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -4,9 +4,7 @@
 {% block content %}
   <div class="container py-5">
     <h1>Привет, я автор</h1>
-    <br>
     <p>
-      <a href="https://github.com/lazarenkov-e" target="_blank">Мой аккаунт</a> с платформы github<br>
       <h4>Что вдохновляет меня заниматься программированием:</h4>
       <ul>
         <li>технологии, которые делают жизнь людей удобнее</li>
@@ -24,6 +22,13 @@
       После анализа курсов по программированию, остановил свой выбор на курсах от Яндекс Практикума "Python-разработчик", где и обучаюсь в настоящее время.
       <br>
       Так выглядит мой кот Тихон, с тех пор как я начал обучение: 
+      <br>
+      <br>
+      <a href="https://github.com/lazarenkov-e" title="github" target="_blank" rel="noopener"><img src="{% static 'img/fav/github.png' %}" width="50" height="50"></a>
+      <a href="https://vk.com/elazarenkov" title="VK" target="_blank" rel="noopener"><img src="{% static 'img/fav/vk.png' %}" width="50" height="50"></a>
+      <a href="https://www.instagram.com/eugenelazarenkov/" title="Instagram" target="_blank" rel="noopener"><img src="{% static 'img/fav/instagram.png' %}" width="50" height="50"></a>
+      <br>
+      <br>     
     </p>
     <br>
     <p align="center">  
