--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="container py-5">
     {% load cache %}
-    {% include 'posts/includes/switcher.html' %}
+    {% include "posts/includes/switcher.html" %}
     {% cache 20 index_page %}
     {% for post in page_obj %}
       <ul>
