--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -34,7 +34,7 @@
       {% if post.author.username == user.username  %}
         <a class="btn btn-primary" href="{% url 'posts:post_edit' post.pk %}"> Редактирование поста </a>
       {% endif %}
-      {% include 'includes/comment.html' %}
+      {% include "includes/comment.html" %}
     </article>
   </div>
 {% endblock %}
